--- a/RayTracing.vcxproj
+++ b/RayTracing.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{614115ED-6774-44AE-9F91-111016EBC0EB}</ProjectGuid>
     <RootNamespace>basicDemo</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.18362.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -152,6 +152,8 @@
     <None Include="assets\shaders\rayCasting.vert" />
     <None Include="assets\shaders\rayCastingOut.frag" />
     <None Include="assets\shaders\rayCastingOut.vert" />
+    <None Include="assets\shaders\rayTracing.frag" />
+    <None Include="assets\shaders\rayTracing.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
