--- a/RayTracing.vcxproj.filters
+++ b/RayTracing.vcxproj.filters
@@ -45,6 +45,12 @@
     <None Include="assets\shaders\rayCastingOut.vert">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="assets\shaders\rayTracing.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="assets\shaders\rayTracing.vert">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Shaders">
